<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="String_howtoplay">HOw To Play</string>
    <string name="String_tap">Tap the Screen and Buttons</string>
    <string name="string_green">GREEN</string>
    <string name="string_yellow">YELLOW</string>
    <string name="string_red">RED</string>
</resources>
